--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "shapefile": "^0.6.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
