--- a/.github/workflows/main_your-world.yml
+++ b/.github/workflows/main_your-world.yml
@@ -20,9 +20,17 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '18.x'
-
-      - name: npm install, build, and test
+      - name: npm install, build, and test frontend
         run: |
+          cd frontend
+          npm install
+          npm run build --if-present
+          npm run test --if-present
+          mv build ../backend/
+      - name: npm install, build, and test backend
+        run: |
+          cd
+          cd backend
           npm install
           npm run build --if-present
           npm run test --if-present
