--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
     "helmet": "^6.0.1",
     "mongo-sanitize": "^1.1.0",
     "mongoose": "^7.0.3",
