--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "mongo-sanitize": "^1.1.0",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22",
-    "passport": "^0.6.0"
+    "passport": "^0.6.0",
+    "pm2": "^5.3.0"
   }
 }
