cypress tests added

--- a/.github/workflows/main_your-world.yml
+++ b/.github/workflows/main_your-world.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - Your-World
+name: Test, build and deploy Node.js app to Your-World
 
 on:
   push:
@@ -36,6 +36,11 @@ jobs:
           cd backend
           npm install
           npm run build --if-present
+          
+      - name: run pm2
+        run: |
+          cd backend
+          pm2 start index.js
 
       - name: Cypress run
         uses: cypress-io/github-action@v5
