--- a/.github/workflows/main_your-world.yml
+++ b/.github/workflows/main_your-world.yml
@@ -10,27 +10,42 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  tests:
     runs-on: ubuntu-latest
+    
+    steps:
       - uses: actions/checkout@v2
+
       - name: Set up Node.js version
         uses: actions/setup-node@v1
         with:
           node-version: '18.x'
+
+      # Install NPM dependencies, cache them correctly
+      # and run all Cypress tests
       - name: npm install and build frontend
         run: |
           cd frontend
           npm install
           npm run build --if-present
           mv build ../backend/
-
-
       - name: npm install and build backend
         run: |
           cd backend
           npm install
           npm run build --if-present
-      
+          
+      - name: run pm2
+        run: |
+          cd backend
+          pm2 start index.js
+      - name: Cypress run
+        uses: cypress-io/github-action@v5
+        with: 
+          cache-dependency-path: ./frontend/
+
+  build:
+    runs-on: ubuntu-latest    
     steps:
       - uses: actions/checkout@v2
 
