Build now only runs with test
Rather than have them in parallel it will test first then build then deploy

--- a/.github/workflows/main_your-world.yml
+++ b/.github/workflows/main_your-world.yml
@@ -45,7 +45,8 @@ jobs:
           path: ./frontend/
 
   build:
-    runs-on: ubuntu-latest    
+    runs-on: ubuntu-latest
+    needs: all_tests
     steps:
       - uses: actions/checkout@v2
 
