Manually installed pm2
Had to globally install pm2 so it can work when doing pm2 start index.js

--- a/.github/workflows/main_your-world.yml
+++ b/.github/workflows/main_your-world.yml
@@ -38,6 +38,7 @@ jobs:
       - name: run pm2
         run: |
           cd backend
+          npm install pm2 -g
           pm2 start index.js
       - name: Cypress run
         uses: cypress-io/github-action@v5
