Uses project instead of path
Cypress will try to run inside the projects path

--- a/.github/workflows/main_your-world.yml
+++ b/.github/workflows/main_your-world.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v5
         with: 
-          path: ./frontend/
+          project: ./frontend
 
   build:
     runs-on: ubuntu-latest
