--- a/.github/workflows/main_your-world.yml
+++ b/.github/workflows/main_your-world.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v5
         with: 
-          project: ./frontend
+          working-directory: ./frontend
 
   build:
     runs-on: ubuntu-latest
