--- a/.github/workflows/main_your-world.yml
+++ b/.github/workflows/main_your-world.yml
@@ -45,6 +45,8 @@ jobs:
         uses: cypress-io/github-action@v5
         with: 
           working-directory: ./frontend
+          wait-on: 'http://localhost:3000'
+          browser: chrome
 
   build:
     runs-on: ubuntu-latest
