--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "bad-words": "^3.0.4",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
     "helmet": "^6.0.1",
+    "jsonwebtoken": "^9.0.0",
     "mongo-sanitize": "^1.1.0",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22",
