--- a/backend/package.json
+++ b/backend/package.json
@@ -25,5 +25,8 @@
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "pm2": "^5.3.0"
+  },
+  "devDependencies": {
+    "supertest": "^6.3.3"
   }
 }
