Holy finally thing might work

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sed erat sed lectus viverra consequat. Nullam a arcu eros. Nullam volutpat ultrices consectetur. Quisque nec orci interdum, pharetra mi vel, luctus ante. Mauris viverra eu turpis eget pellentesque. Praesent posuere metus vel tortor convallis, non varius turpis accumsan. Fusce at placerat ipsum. Cras id efficitur nibh, vel tincidunt metus. Duis sodales diam ac lectus placerat, at ullamcorper diam hendrerit. Aenean suscipit ex et tincidunt placerat. Integer non sapien ut turpis rhoncus dapibus. Pellentesque suscipit auctor tortor, ultrices vulputate est. In massa lacus, ornare vitae pharetra at, consequat a risus. Quisque aliquam sollicitudin tellus vel viverra. Suspendisse viverra risus ac justo rhoncus placerat.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -22,9 +22,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongo-sanitize": "^1.1.0",
     "mongoose": "^7.0.3",
-    "nodemon": "^2.0.22",
-    "passport": "^0.6.0",
-    "pm2": "^5.3.0"
+    "nodemon": "^2.0.22"
   },
   "devDependencies": {
     "jest": "^29.5.0",
