--- a/.github/workflows/main_your-world.yml
+++ b/.github/workflows/main_your-world.yml
@@ -12,14 +12,6 @@ on:
 jobs:
   all_tests:
     runs-on: ubuntu-latest
-    services:
-      mongodb:
-        # Use the `healthcheck` option to check the health of the MongoDB container
-        healthcheck:
-          test: ["CMD-SHELL", "mongo --eval \"db.runCommand({ ping: 1 })\""]
-          interval: 10s
-          timeout: 5s
-          retries: 3
     steps:
       - uses: actions/checkout@v2
 
@@ -27,6 +19,10 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '18.x'
+      - name: Start MongoDB
+        uses: supercharge/mongodb-github-action@1.8.0
+        with:
+          mongodb-version: 6.0
 
       - name: npm install and build frontend
         run: |
