--- a/.github/workflows/main_your-world.yml
+++ b/.github/workflows/main_your-world.yml
@@ -50,7 +50,7 @@ jobs:
           cd frontend
           npx cypress run
 
-  build:
+  deploy:
     runs-on: ubuntu-latest
     needs: all_tests
     steps:
@@ -71,30 +71,9 @@ jobs:
           cd backend
           npm install
           npm run build --if-present
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v2
+      - uses: akhileshns/heroku-deploy@v3.12.13 # This is the action
         with:
-          name: node-app
-          path: ./backend/
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v2
-        with:
-          name: node-app
-
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: 'Your-World'
-          slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_F547F3DB44334BBB98C0C814EF1FDB26 }}
-          package: .
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "your-world" #Must be unique in Heroku
+          heroku_email: "waterdude50@gmail.com"
+          appdir: "backend" # <- This will point to the api folder in your proje
