--- a/.github/workflows/main_your-world.yml
+++ b/.github/workflows/main_your-world.yml
@@ -28,13 +28,12 @@ jobs:
         run: |
           cd frontend
           npm install
-          npm run build --if-present
+          npm run build
           mv build ../backend/
       - name: npm install and build backend
         run: |
           cd backend
           npm install
-          npm run build --if-present
       - name: Run front-end tests
         run: |
           cd backend
@@ -64,13 +63,12 @@ jobs:
         run: |
           cd frontend
           npm install
-          npm run build --if-present
+          npm run build
           mv build ../backend/
       - name: npm install and build backend
         run: |
           cd backend
           npm install
-          npm run build --if-present
       - uses: akhileshns/heroku-deploy@v3.12.13 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
