Forgot cypress failed
Had to use npm install in the front end so it doesnt die

--- a/.github/workflows/main_your-world.yml
+++ b/.github/workflows/main_your-world.yml
@@ -23,6 +23,10 @@ jobs:
         uses: supercharge/mongodb-github-action@1.8.0
         with:
           mongodb-version: 6.0
+      - name: npm install in frontend
+        run: |
+          cd frontend
+          npm install
       - name: npm install and build backend
         run: |
           cd backend
