--- a/.github/workflows/main_your-world.yml
+++ b/.github/workflows/main_your-world.yml
@@ -9,14 +9,12 @@ on:
       - main
   workflow_dispatch:
 
-env:
-  REACT_APP_API_URL: 'http://localhost:3000/auth'
 
 jobs:
   all_tests:
     runs-on: ubuntu-latest
     env:
-      REACT_APP_API_URL
+      REACT_APP_API_URL: http://localhost:3000/auth
     steps:
       - uses: actions/checkout@v2
 
