--- a/.github/workflows/main_your-world.yml
+++ b/.github/workflows/main_your-world.yml
@@ -1,6 +1,3 @@
-#Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Test, build and deploy Node.js app to Your-World
 
 on:
@@ -8,7 +5,6 @@ on:
     branches:
       - main
   workflow_dispatch:
-
 
 jobs:
   all_tests:
@@ -26,10 +22,13 @@ jobs:
         uses: supercharge/mongodb-github-action@1.8.0
         with:
           mongodb-version: 6.0
-      - name: npm install in frontend
+
+      - name: npm install and build frontend
         run: |
           cd frontend
           npm install
+          npm run build
+          mv build ../backend/
       - name: npm install and build backend
         run: |
           cd backend
@@ -48,7 +47,6 @@ jobs:
         run: |
           cd frontend
           npx cypress run
-
   deploy:
     runs-on: ubuntu-latest
     needs: all_tests
@@ -59,6 +57,16 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '18.x'
+      - name: npm install and build frontend
+        run: |
+          cd frontend
+          npm install
+          npm run build
+          mv build ../backend/
+      - name: npm install and build backend
+        run: |
+          cd backend
+          npm install
       - uses: akhileshns/heroku-deploy@v3.12.13 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
