--- a/.github/workflows/main_your-world.yml
+++ b/.github/workflows/main_your-world.yml
@@ -62,7 +62,7 @@ jobs:
           cd frontend
           npm install
           npm run build
-          mv /build ../backend/
+          mv build ../backend/
       - name: npm install and build backend
         run: |
           cd backend
