a sad attempt to see if name c hange works

--- a/.github/workflows/main_your-world.yml
+++ b/.github/workflows/main_your-world.yml
@@ -28,7 +28,7 @@ jobs:
           cd frontend
           npm install
           npm run build
-          mv build ../backend/
+          mv build ../backend/checking
       - name: npm install and build backend
         run: |
           cd backend
@@ -62,7 +62,7 @@ jobs:
           cd frontend
           npm install
           npm run build
-          mv build ../backend/
+          mv build ../backend/checking
       - name: npm install and build backend
         run: |
           cd backend
