Forgor to add this
Env variable in the deploy so it can compile correctly lol

--- a/.github/workflows/main_your-world.yml
+++ b/.github/workflows/main_your-world.yml
@@ -50,6 +50,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: all_tests
+    env:
+      REACT_APP_API_URL: https://your-world.herokuapp.com/auth
     steps:
       - uses: actions/checkout@v2
 
