--- a/.github/workflows/main_your-world.yml
+++ b/.github/workflows/main_your-world.yml
@@ -43,7 +43,7 @@ jobs:
           node server.js &
       - name: Wait on server to start
         run: npx wait-on http://localhost:3001
-      - name: Cypress run
+      - name: Run front-end tests
         run: |
           cd frontend
           npx cypress run
