--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "@turf/turf": "^6.5.0",
     "axios": "^1.3.4",
     "html2canvas": "^1.4.1",
+    "leaflet": "^1.9.3",
+    "leaflet-simple-map-screenshoter": "^0.5.0",
     "mui": "^0.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
