--- a/.github/workflows/main_your-world.yml
+++ b/.github/workflows/main_your-world.yml
@@ -49,7 +49,7 @@ jobs:
       #     npx cypress run
       - uses: cypress-io/github-action@v5
         with:
-          project: ./frontend
+            working-directory: ./frontend
       - uses: actions/upload-artifact@v3
         if: failure()
         with:
