--- a/.github/workflows/main_your-world.yml
+++ b/.github/workflows/main_your-world.yml
@@ -50,11 +50,12 @@ jobs:
       - uses: cypress-io/github-action@v5
         with:
             working-directory: ./frontend
+            wait-on: 'http://localhost:3001'
       - uses: actions/upload-artifact@v3
         if: failure()
         with:
           name: cypress-videos
-          path: cypress/videos
+          path: frontend/cypress/videos
   deploy:
     runs-on: ubuntu-latest
     needs: all_tests
