--- a/.github/workflows/main_your-world.yml
+++ b/.github/workflows/main_your-world.yml
@@ -56,6 +56,9 @@ jobs:
         with:
           name: cypress-videos
           path: frontend/cypress/videos
+      - name: Download all workflow run 
+        if: failure()
+        uses: actions/download-artifact@v3
   deploy:
     runs-on: ubuntu-latest
     needs: all_tests
