--- a/.github/workflows/main_your-world.yml
+++ b/.github/workflows/main_your-world.yml
@@ -44,22 +44,15 @@ jobs:
           node server.js &
       - name: Wait on server to start
         run: npx wait-on http://localhost:3001
-      # - name: Run front-end tests
-      #   run: |
-      #     cd frontend
-      #     npx cypress run
-      - uses: cypress-io/github-action@v5
-        with:
-            working-directory: ./frontend
-            wait-on: 'http://localhost:3001'
+      - name: Run front-end tests
+        run: |
+          cd frontend
+          npx cypress run
       - uses: actions/upload-artifact@v3
         if: failure()
         with:
           name: cypress-videos
           path: frontend/cypress/videos
-      - name: Download all workflow run 
-        if: failure()
-        uses: actions/download-artifact@v3
   deploy:
     runs-on: ubuntu-latest
     needs: all_tests
