try to fix the name again

--- a/.github/workflows/main_your-world.yml
+++ b/.github/workflows/main_your-world.yml
@@ -70,7 +70,7 @@ jobs:
           cd frontend
           npm install
           npm run build
-          mv build ../backend/what
+          mv build ../backend/
       - name: npm install and build backend
         run: |
           cd backend
