--- a/.github/workflows/main_your-world.yml
+++ b/.github/workflows/main_your-world.yml
@@ -29,7 +29,7 @@ jobs:
           cd frontend
           npm install
           npm run build
-          mv build ../backend/what
+          mv build ../backend/
       - name: npm install and build backend
         run: |
           cd backend
