--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@turf/turf": "^6.5.0",
+    "assert": "^2.0.0",
     "axios": "^1.3.4",
     "html2canvas": "^1.4.1",
     "leaflet": "^1.9.3",
@@ -24,7 +25,7 @@
     "react-leaflet-draw": "^0.20.4",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "shapefile": "^0.6.6",
+    "shp-write": "^0.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
