--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-leaflet-draw": "^0.20.4",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "shapefile": "^0.6.6",
     "shp-write": "^0.3.2",
     "web-vitals": "^2.1.4"
   },
