--- a/backend/package.json
+++ b/backend/package.json
@@ -18,11 +18,13 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
+    "geojson2shp": "^0.5.0",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongo-sanitize": "^1.1.0",
     "mongoose": "^7.0.3",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "shp-write": "^0.3.2"
   },
   "devDependencies": {
     "jest": "^29.5.0",
