Center and zoom automatically adjusts, added placeholder thumbnail, fix color picker bug, CSS

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,9 @@
     "leaflet": "^1.9.3",
     "leaflet-simple-map-screenshoter": "^0.5.0",
     "mui": "^0.0.1",
-    "mui-color-input": "^1.0.5",
     "ogr2ogr": "^4.0.1",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-leaflet-draw": "^0.20.4",
