--- a/backend/package.json
+++ b/backend/package.json
@@ -23,8 +23,10 @@
     "jsonwebtoken": "^9.0.0",
     "mongo-sanitize": "^1.1.0",
     "mongoose": "^7.0.3",
+    "nodemailer": "^6.9.2",
     "nodemon": "^2.0.22",
-    "shp-write": "^0.3.2"
+    "shp-write": "^0.3.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "jest": "^29.5.0",
